# bilibili-downloader

./: .gitignore  README.md  README_zh.md  icon.icns  py2app_build.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-macos.yml
src/: __init__.py  bilibili_downloader.icns  bilibili_downloader.py  main_app.py
tests/: conftest.py
